--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-            alt="Livro sobre apache kafka e spring boot da alura books"></div>
-        <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+            alt="Livros maravilhosos que irão prendelos do começo ao fim"></div>
+        <div class="swiper-slide"><img src="https://m.media-amazon.com/images/I/91ZyCiArB0L._UF894,1000_QL80_.jpg" alt="Em busca da perfeição">
         </div>
         <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
         </div>
