--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
-        <div class="swiper-slide"><img src="img/Apachekafka.svg"
-            alt="Livro sobre apache kafka e spring boot da alura books"></div>
+        <div class="swiper-slide"><img src="https://a-static.mlcdn.com.br/470x352/em-busca-de-cinderela-e-em-busca-da-perfeicao-colleen-hoover/credencialshops/15999686691/b738d6f5d13ac907dbd95fade4a7ce9d.jpeg"
+            alt="em busca da perfeição"></div>
         <div class="swiper-slide"><img src="img/Liderança.svg"
             alt="Livro sobre liderança em design design da alura books"></div>
         <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
@@ -120,7 +120,7 @@
         <!-- Slides -->
         <div class="swiper-slide"><img src="img/ApacheKafka.svg"
             alt="Livros maravilhosos que irão prendelos do começo ao fim"></div>
-        <div class="swiper-slide"><img src="https://m.media-amazon.com/images/I/91ZyCiArB0L._UF894,1000_QL80_.jpg" alt="Em busca da perfeição">
+        <div class="swiper-slide"><img src="yvof" alt="Em busca da perfeição">
         </div>
         <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
         </div>
